--- a/alotta-database/build.gradle
+++ b/alotta-database/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    testImplementation 'com.h2database:h2'
+    implementation project(':alotta-core')
+    implementation 'com.h2database:h2'
 }
