--- a/alotta-process/build.gradle
+++ b/alotta-process/build.gradle
@@ -1,2 +1,11 @@
+bootJar.enabled = true
+bootRun.enabled = true
+
+bootBuildImage {
+    enabled = true
+}
+
 dependencies {
+    implementation project(":alotta-core")
+    implementation project(":alotta-database")
 }
