Implemented appUser service and object

--- a/alotta_client/build.yaml
+++ b/alotta_client/build.yaml
@@ -5,12 +5,14 @@ targets:
         enabled: true
         generate_for:
           include:
+            - lib/assets/data/app_user.dart
             - lib/assets/data/coupon.dart
       # Typically the builder key is just the package name, run `pub run build_runner doctor` to check your config.
       json_serializable:
         enabled: true
         generate_for:
           include:
+            - lib/assets/data/app_user.dart
             - lib/assets/data/coupon.dart
         options:
           explicit_to_json: true
