updated the build.gradle to ignore adding extra dependencies into the allot_client folder

--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ group = 'liberty.capstone'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
-configure(subprojects.findAll{!it.name.endsWith("-client")}) {
+configure(subprojects.findAll{!it.name.endsWith("_client")}) {
 	project.version = project.rootProject.version
 	project.group = project.rootProject.group
 
