--- a/.github/workflows/master_alotta-spring-app.yml
+++ b/.github/workflows/master_alotta-spring-app.yml
@@ -50,4 +50,4 @@ jobs:
           app-name: 'alotta-spring-app'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_46E0D2AE74E74305A613F34CDE95EDAE }}
-          package: '${{ github.workspace }}/build/libs/*.jar'
+          package: '$/build/libs/*.jar'
