--- a/alotta-process/src/main/resources/application.yml
+++ b/alotta-process/src/main/resources/application.yml
@@ -7,4 +7,4 @@ spring:
   jpa:
     hibernate.ddl-auto: create-drop
     show-sql: true
-    database-platform: org.hibernate.dialect.SQLServer2012Dialect
+    dialect: org.hibernate.dialect.SQLServer2012Dialect
