--- a/alotta-database/build.gradle
+++ b/alotta-database/build.gradle
@@ -2,5 +2,5 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation project(':alotta-core')
     implementation 'com.h2database:h2'
-    implementation 'com.microsoft.sqlserver:mssql-jdbc_auth:12.2.0.x86'
+    implementation 'com.microsoft.sqlserver:mssql-jdbc:12.2.0.jre11'
 }
