--- a/alotta-process/src/main/resources/application.yml
+++ b/alotta-process/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     url: jdbc:sqlserver://alotta-db.database.windows.net:1433;database=alotta-db;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-    username: alotta-admin
+    username: alotta-admin@alotta-db
     password: lucapstone2023!
     database: alotta-db
     driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
