--- a/alotta-process/src/main/resources/application.yml
+++ b/alotta-process/src/main/resources/application.yml
@@ -6,6 +6,6 @@ spring:
     database: alotta-db
     driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
   jpa:
-    hibernate.ddl-auto: create-drop
+    hibernate.ddl-auto: update
     show-sql: true
     properties.hibernate.dialect: org.hibernate.dialect.SQLServer2012Dialect
