+ Fixed routing issues to make it simpler when trying to add a new route + Moved some methods and widgets around like the bottom menu_bar to be in a location that can used by other services and widgets. + Created an AppUserAccountType enum to store the account types on each appUser + Updated the widget pages to pass the current AppUser from page to page so that validation can be done if the user can see a particular page and also so that the user's data can be used on each page + Updated the json_annotation and json_serializable versions + Updated the build.yaml to auto-detect any new data objects in the data folder to run serialization on those classes + Updated the gaps in logic on the backend when saving a restaurant to a user to make sure it is saved in the combination table

--- a/alotta_client/build.yaml
+++ b/alotta_client/build.yaml
@@ -5,15 +5,13 @@ targets:
         enabled: true
         generate_for:
           include:
-            - lib/assets/data/app_user.dart
-            - lib/assets/data/coupon.dart
+            - lib/assets/data/*.dart
       # Typically the builder key is just the package name, run `pub run build_runner doctor` to check your config.
       json_serializable:
         enabled: true
         generate_for:
           include:
-            - lib/assets/data/app_user.dart
-            - lib/assets/data/coupon.dart
+            - lib/assets/data/*.dart
         options:
           explicit_to_json: true
           include_if_null: false
