--- a/alotta-database/build.gradle
+++ b/alotta-database/build.gradle
@@ -3,4 +3,5 @@ dependencies {
     implementation project(':alotta-core')
     implementation 'com.h2database:h2'
     implementation 'com.microsoft.sqlserver:mssql-jdbc:12.2.0.jre11'
+    implementation 'com.github.spotbugs:spotbugs-annotations:3.1.2'
 }
