--- a/alotta-database/src/main/resources/application.yml
+++ b/alotta-database/src/main/resources/application.yml
@@ -7,5 +7,5 @@ spring:
     driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
   jpa:
     hibernate.ddl-auto: update
-    show-sql: true
+    show-sql: false
     properties.hibernate.dialect: org.hibernate.dialect.SQLServer2012Dialect
