QRCode-Service  + Created a QRCodeRequest object to represent the JSON object needed for the QRCodeApi  + Created the buildQRCodeRequest method to build the url onto the object  + Created a AlottaProperties object to get the property values from the yml file  + Created the QRCodeService to handle the request object and return the response PNG image

--- a/alotta-process/src/main/resources/application.yml
+++ b/alotta-process/src/main/resources/application.yml
@@ -9,3 +9,8 @@ spring:
     hibernate.ddl-auto: update
     show-sql: true
     properties.hibernate.dialect: org.hibernate.dialect.SQLServer2012Dialect
+
+alotta-properties:
+  backendUrl: http://localhost:8080
+  qrApiUrl: https://api.qr-code-generator.com/v1/create?access-token=
+  qrApiToken: OYxLPbO9S7Yrky8zH81G7jsBwzPF-mgORANb4D4Va3xgqj9PZUm3RyaK3rvGMEYG
