--- a/alotta-process/src/main/resources/application.yml
+++ b/alotta-process/src/main/resources/application.yml
@@ -11,6 +11,6 @@ spring:
     properties.hibernate.dialect: org.hibernate.dialect.SQLServer2012Dialect
 
 alotta-properties:
-  backendUrl: http://localhost:8080
+  backendUrl: http://alotta-spring-app.azurewebsites.net
   qrApiUrl: https://api.qr-code-generator.com/v1/create?access-token=
   qrApiToken: OYxLPbO9S7Yrky8zH81G7jsBwzPF-mgORANb4D4Va3xgqj9PZUm3RyaK3rvGMEYG
