--- a/alotta_client/pubspec.yaml
+++ b/alotta_client/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   multiselect: ^0.1.0
+  flutter_image: ^4.1.5
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
