--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,8 @@ configure(subprojects.findAll{!it.name.endsWith("_client")}) {
 		annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 		testCompileOnly 'org.projectlombok:lombok'
 		testAnnotationProcessor 'org.projectlombok:lombok'
+		compileOnly 'com.google.code.findbugs:annotations:3.0.1'
+		compileOnly 'com.google.code.findbugs:jsr305:3.0.1'
 	}
 
 }
