--- a/alotta_client/pubspec.yaml
+++ b/alotta_client/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.4
   json_annotation: ^4.8.0
+  google_nav_bar: ^5.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
