--- a/alotta_client/pubspec.yaml
+++ b/alotta_client/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_image: ^4.1.5
   cached_network_image: ^3.2.3
   flip_card: ^0.7.0
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
