--- a/alotta-database/src/main/resources/application.yml
+++ b/alotta-database/src/main/resources/application.yml
@@ -1,11 +1,8 @@
 spring:
   datasource:
-    url: jdbc:sqlserver://alotta-db.database.windows.net:1433;database=alotta-db;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-    username: alotta-admin@alotta-db
-    password: lucapston2023!
-    database: alotta-db
-    driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
+    url: ${DATABASE_URL}
+    driverClassName: org.postgresql.Driver
   jpa:
-    hibernate.ddl-auto: update
+    hibernate.ddl-auto: create
     show-sql: false
-    properties.hibernate.dialect: org.hibernate.dialect.SQLServer2012Dialect
+    properties.hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
