--- a/alotta-database/src/main/resources/application.yml
+++ b/alotta-database/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   datasource:
     url: ${DATABASE_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
     driverClassName: org.postgresql.Driver
   jpa:
     hibernate.ddl-auto: create
