--- a/alotta-database/build.gradle
+++ b/alotta-database/build.gradle
@@ -2,6 +2,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation project(':alotta-core')
     implementation 'com.h2database:h2'
-    implementation 'com.microsoft.sqlserver:mssql-jdbc:12.2.0.jre11'
+    implementation 'org.postgresql:postgresql'
     implementation 'com.github.spotbugs:spotbugs-annotations:3.1.2'
 }
